--- a/PJ/Project/app/src/main/res/layout/activity_account.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_account.xml
@@ -27,7 +27,7 @@
                 android:layout_marginStart="10dp"
                 android:background="@drawable/back_black_2"/>
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/img_avatar"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 app:srcCompat="@drawable/manavatar"
