--- a/PJ/Project/app/src/main/res/layout/activity_voc2.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_voc2.xml
@@ -21,7 +21,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chủ đề 1: Contracts"
+        android:text="Chủ đề 2: Marketing"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
