--- a/PJ/Project/app/src/main/res/layout/activity_voc3.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_voc3.xml
@@ -21,7 +21,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chủ đề 1: Contracts"
+        android:text="Chủ đề 3: Warranties"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -46,7 +46,7 @@
                 android:id="@+id/textViewVoc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="50dp"
+                android:textSize="45dp"
                 android:gravity="center"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
