--- a/PJ/Project/app/src/main/res/layout/activity_voc8.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_voc8.xml
@@ -21,7 +21,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chủ đề 1: Contracts"
+        android:text="Chủ đề 8: Office Procedures"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -46,7 +46,7 @@
                 android:id="@+id/textViewVoc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="50dp"
+                android:textSize="45dp"
                 android:gravity="center"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -119,7 +119,7 @@
         android:layout_marginBottom="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="1/12"
+        android:text="1/9"
         android:textSize="30dp"
         android:textStyle="bold"/>
     <Button
