--- a/PJ/Project/app/src/main/res/layout/activity_account.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_account.xml
@@ -36,6 +36,15 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="60dp"/>
 
+            <ImageView
+                android:id="@+id/img_avatar2"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toLeftOf="parent"
+                android:layout_marginTop="60dp"/>
+
             <TextView
                 android:id="@+id/tvName"
                 android:layout_width="wrap_content"
@@ -44,7 +53,7 @@
                 android:text="NAME"
                 android:textSize="25dp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/imageView"
+                app:layout_constraintTop_toBottomOf="@id/img_avatar"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
             <TextView
