--- a/PJ/Project/app/src/main/res/layout/activity_testgrammar.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_testgrammar.xml
@@ -73,16 +73,16 @@
           android:id="@+id/progressBarQuesTime"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginEnd="50dp"
+          android:layout_marginEnd="48dp"
           android:indeterminate="false"
           android:max="300"
           android:progress="300"
           app:indicatorSize="80dp"
-          app:trackThickness="8dp"
           app:layout_constraintBottom_toBottomOf="@+id/textViewQuesCount"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="@+id/textView4"
-          app:layout_constraintVertical_bias="0.444" />
+          app:layout_constraintVertical_bias="0.333"
+          app:trackThickness="8dp" />
 
       <TextView
           android:id="@+id/textViewQuesTime"
@@ -152,39 +152,28 @@
       app:layout_constraintTop_toBottomOf="@+id/btnAns3" />
 
   <Button
-      android:id="@+id/btnBackQues"
-      style="@style/Widget.Material3.Button.ElevatedButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="20dp"
-      android:layout_marginBottom="20dp"
-      android:text="Back"
-      app:icon="@drawable/back"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintStart_toStartOf="parent" />
-
-  <Button
       android:id="@+id/btnNextQues"
       style="@style/Widget.Material3.Button.ElevatedButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginEnd="20dp"
       android:layout_marginBottom="20dp"
       android:text="Next"
       app:icon="@drawable/next"
       app:iconGravity="end"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent" />
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginEnd="60dp"
+      app:layout_constraintBottom_toBottomOf="parent"/>
 
   <Button
       android:id="@+id/btnSubmit"
       style="@style/Widget.Material3.Button.ElevatedButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginBottom="20dp"
       android:text="Submit"
-      app:layout_constraintStart_toEndOf="@id/btnBackQues"
-      app:layout_constraintEnd_toStartOf="@id/btnNextQues"
-      app:layout_constraintTop_toTopOf="@id/btnNextQues"/>
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginStart="60dp"/>
 
   <com.google.android.material.progressindicator.LinearProgressIndicator
       android:id="@+id/progressQues"
@@ -195,6 +184,6 @@
       android:layout_marginStart="15dp"
       android:layout_marginEnd="15dp"
       android:max="100"
-      android:progress="20"/>
+      android:progress="10"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
