--- a/PJ/Project/app/src/main/res/layout/activity_test_vocabulary.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_test_vocabulary.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Test.TestVocabulary">
+    tools:context=".Test.TestGrammar">
 
     <ImageButton
         android:layout_width="30dp"
@@ -61,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="5/10"
+                android:text="1/10"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/textView4"
@@ -72,16 +73,16 @@
                 android:id="@+id/progressBarQuesTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="50dp"
+                android:layout_marginEnd="48dp"
                 android:indeterminate="false"
                 android:max="300"
                 android:progress="300"
                 app:indicatorSize="80dp"
-                app:trackThickness="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewQuesCount"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textView4"
-                app:layout_constraintVertical_bias="0.444" />
+                app:layout_constraintVertical_bias="0.333"
+                app:trackThickness="8dp" />
 
             <TextView
                 android:id="@+id/textViewQuesTime"
@@ -102,7 +103,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="@string/question5"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +116,6 @@
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="A. account"
         android:layout_marginTop="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +126,6 @@
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="B. tale"
         android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +136,6 @@
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="C. communication"
         android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,46 +146,34 @@
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="D. plot"
         android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnAns3" />
 
     <Button
-        android:id="@+id/btnBackQues"
-        style="@style/Widget.Material3.Button.ElevatedButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="Back"
-        app:icon="@drawable/back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
         android:id="@+id/btnNextQues"
         style="@style/Widget.Material3.Button.ElevatedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:text="Next"
         app:icon="@drawable/next"
         app:iconGravity="end"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
         android:id="@+id/btnSubmit"
         style="@style/Widget.Material3.Button.ElevatedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:text="Submit"
-        app:layout_constraintStart_toEndOf="@id/btnBackQues"
-        app:layout_constraintEnd_toStartOf="@id/btnNextQues"
-        app:layout_constraintTop_toTopOf="@id/btnNextQues"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="60dp"/>
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progressQues"
@@ -199,6 +184,6 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:max="100"
-        android:progress="50"/>
+        android:progress="10"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
