--- a/PJ/Project/app/src/main/res/layout/activity_account.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_account.xml
@@ -36,6 +36,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="60dp"/>
 
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/img_edit_profile"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="50dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/edit" />
 
             <TextView
                 android:id="@+id/tvName"
@@ -173,14 +183,17 @@
                     android:textStyle="bold"/>
 
                 <TextView
-                    android:id="@+id/textView11"
+                    android:id="@+id/txtbtn_changpass"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Change"
                     android:paddingEnd="20dp"
                     android:textSize="18dp"
-                    android:gravity="end"/>
+                    android:gravity="end"
+                    android:textStyle="bold"
+                    android:clickable="true"
+                    android:textColor="@color/bluelight" />
             </LinearLayout>
 
             <View
