--- a/PJ/Project/app/src/main/res/layout/activity_leader_board.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_leader_board.xml
@@ -33,9 +33,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView2"
         app:cardCornerRadius="20dp">
-        <ImageView
+        <!--<ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/leaderboardui"/>
+            android:background="@drawable/leaderboardui"/>-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recylerviewLeaderboard"/>
+
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
