--- a/PJ/Project/app/src/main/res/layout/activity_account.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_account.xml
@@ -44,7 +44,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="50dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="20dp"
                 android:background="@drawable/edit" />
 
             <TextView
@@ -136,7 +136,7 @@
 
                 <TextView
                     android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
+                    android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:text="Address"
@@ -146,7 +146,7 @@
 
                 <TextView
                     android:id="@+id/tvAddress"
-                    android:layout_width="wrap_content"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Number xx, street xxx"
