--- a/PJ/Project/app/src/main/res/layout/user_leaderboard.xml
+++ b/PJ/Project/app/src/main/res/layout/user_leaderboard.xml
@@ -1,48 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="12dp">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginStart="5dp">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginStart="5dp">
+        android:orientation="horizontal"
+        android:layout_gravity="center_vertical">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical">
+            android:id="@+id/tvRank"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvRank"
-                android:textSize="20dp"
-                android:textStyle="bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvUsername"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:layout_marginStart="50dp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvUsername"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:layout_marginStart="50dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvScore"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:layout_marginStart="20dp"/>
-        </LinearLayout>
-
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvScore"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:layout_marginStart="20dp"/>
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+
+</LinearLayout>
