--- a/PJ/Project/app/src/main/res/layout/user_leaderboard.xml
+++ b/PJ/Project/app/src/main/res/layout/user_leaderboard.xml
@@ -10,18 +10,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvRank"
             android:textSize="20dp"
+            android:layout_marginStart="10dp"
             android:textStyle="bold"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:id="@+id/tvUsername"
             android:textStyle="bold"
@@ -36,6 +36,5 @@
             android:textSize="20dp"
             android:layout_marginStart="20dp"/>
     </LinearLayout>
-
 
 </LinearLayout>
