--- a/PJ/Project/app/src/main/res/layout/activity_leader_board.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_leader_board.xml
@@ -27,11 +27,51 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/tvInfor"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintTop_toBottomOf="@id/imageView2">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Rank"
+                android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:gravity="center"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Name"
+                android:textStyle="bold"
+                android:layout_marginStart="40dp"
+                android:gravity="center"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Score"
+                android:textStyle="bold"
+                android:layout_marginStart="130dp"
+                android:gravity="center"/>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="293dp"
         android:layout_height="533dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView2"
+        app:layout_constraintTop_toBottomOf="@id/tvInfor"
+        android:layout_marginTop="5dp"
         app:cardCornerRadius="20dp">
 
         <androidx.recyclerview.widget.RecyclerView
