--- a/PJ/Project/app/src/main/res/layout/activity_test_result.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_test_result.xml
@@ -38,11 +38,33 @@
         android:layout_marginTop="50dp"/>
 
     <LinearLayout
+        android:id="@+id/group0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:orientation="horizontal"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/progressBarQuesTime"
+        tools:layout_editor_absoluteX="10dp">
+
+        <TextView
+            android:id="@+id/tvCongratutation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/group1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="100dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintTop_toBottomOf="@id/progressBarQuesTime">
