--- a/PJ/Project/app/src/main/res/layout/list_result_items.xml
+++ b/PJ/Project/app/src/main/res/layout/list_result_items.xml
@@ -6,7 +6,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+
             android:orientation="vertical">
 
             <TextView
@@ -14,6 +14,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="25dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
